--- a/Estilos.css
+++ b/Estilos.css
@@ -5,3 +5,10 @@ header{
     text-align: center;
     color: blue;
 }
+/*Estilo para l abarra de navegación*/
+nav a{
+    color: black;
+    text-decoration: none;
+    margin: 0 15 px;
+    font-weight: bold;
+}
