--- a/Estilos.css
+++ b/Estilos.css
@@ -12,3 +12,30 @@ nav a{
     margin: 0 15 px;
     font-weight: bold;
 }
+nav a:hover{
+    color: blueviolet;
+}
+/*Estilo para la sección principal*/
+.contenedor{
+    width: 90%;
+    margin: 20px auto;
+    padding: 15px;
+    background-color: azure;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgb(0, 0, 130.1);
+}
+.contenedor h2{
+    color: chocolate;
+}
+.contenedor p{
+    color: rgb(30, 210, 54);
+    font-size: 16px;
+    line-height: 1.6;
+}
+footer{
+    background-color: darkseagreen;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 20px;
+}
